--- a/Calculater.html
+++ b/Calculater.html
@@ -1,12 +1,10 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-
+    <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="calculater.css">
     <title>Calculator</title>
 </head>
@@ -14,101 +12,46 @@
 <div class="container my-3">
     <h1>Calculater</h1>
     <div id="input">
-
-        <input type="text" id="screen" aria-describedby="emailHelp">
-
+        <input type="text" id="screen">
     </div>
     <table>
         <tr>
-            <th>
-                <button>C</button>
-            </th>
-            <th>
-                <button>(</button>
-            </th>
-            <th>
-                <button>)</button>
-            </th>
-            <th>
-                <button>^</button>
-            </th>
-            <th>
-                <button>BS</button>
-            </th>
+            <th><button>C</button></th>
+            <th><button>(</button></th>
+            <th><button>)</button></th>
+            <th><button>^</button></th>
+            <th><button>BS</button></th>
         </tr>
         <tr>
-            <th>
-                <button>7</button>
-            </th>
-            <th>
-                <button>8</button>
-            </th>
-            <th>
-                <button>9</button>
-            </th>
-            <th>
-                <button>÷</button>
-            </th>
-            <th>
-                <button></button>
-            </th>
+            <th><button>7</button></th>
+            <th><button>8</button></th>
+            <th><button>9</button></th>
+            <th><button>÷</button></th>
+            <th><button></button></th>
         </tr>
         <tr>
-            <th>
-                <button>4</button>
-            </th>
-            <th>
-                <button>5</button>
-            </th>
-            <th>
-                <button>6</button>
-            </th>
-            <th>
-                <button>×</button>
-            </th>
-            <th>
-                <button></button>
-            </th>
+            <th><button>4</button></th>
+            <th><button>5</button></th>
+            <th><button>6</button></th>
+            <th><button>×</button></th>
+            <th><button></button></th>
         </tr>
         <tr>
-            <th>
-                <button>1</button>
-            </th>
-            <th>
-                <button>2</button>
-            </th>
-            <th>
-                <button>3</button>
-            </th>
-            <th>
-                <button>-</button>
-            </th>
-            <th>
-                <button></button>
-            </th>
+            <th><button>1</button></th>
+            <th><button>2</button></th>
+            <th><button>3</button></th>
+            <th><button>-</button></th>
+            <th><button></button></th>
         </tr>
         <tr>
-            <th>
-                <button>.</button>
-            </th>
-            <th>
-                <button>0</button>
-            </th>
-            <th>
-                <button>00</button>
-            </th>
-            <th>
-                <button>+</button>
-            </th>
-            <th>
-                <button>=</button>
-            </th>
+            <th><button>.</button></th>
+            <th><button>0</button></th>
+            <th><button>00</button></th>
+            <th><button>+</button></th>
+            <th><button>=</button></th>
         </tr>
-
     </table>
 </div>
-
-
 </body>
 <script type="text/javascript" src="Calculater.js"></script>
 </html>
