--- a/src/Calculater.html
+++ b/src/Calculater.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- CSS -->
-    <link rel="stylesheet" type="text/css" href="calculater.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>Calculator</title>
 </head>
 <body>
 <div class="container my-3">
-    <h1>Calculater</h1>
+    <h1>CALCULATOR</h1>
     <div id="input">
         <input type="text" id="screen">
     </div>
@@ -53,5 +53,5 @@
     </table>
 </div>
 </body>
-<script type="text/javascript" src="Calculater.js"></script>
+<script type="text/javascript" src="script.js"></script>
 </html>
